# videso

./: CMakeLists.txt  README.md  main.cpp
capture/: dxgi_capture.cpp  dxgi_capture.h
config/: config.cpp  config.h
detection/: hsv_detector.cpp  hsv_detector.h
input/: key_sender.cpp  key_sender.h
ui/: imgui_panel.cpp  imgui_panel.h
